test.tf
provider "aws" {
  region = "ap-southeast-1"
}

# Create VPC
resource "aws_vpc" "main" {
  cidr_block                     = "172.17.0.0/16"
  enable_dns_support             = "true"
  enable_dns_hostnames           = "true"
  enable_classiclink             = "false"
  enable_classiclink_dns_support = "false"
}
